# kova

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  index.html  package.json  vite.config.ts
.agents/: product-marketing-context.md
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: 1-1-tauri-app-init-basic-shell.md  1-2-environment-auto-detect-onboarding.md  1-3-project-registration-card-dashboard.md  1-4-project-edit-delete-offline-management.md  1-5-cmd-k-command-palette-keyboard-navigation.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-07.md  prd.md  product-brief-flow-orche-2026-02-06.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_integration-notes/: project-crud-deps.md  ux-palette-deps.md
docs/: git-feature-roadmap.md
scripts/: capture-window.sh  dev.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/plugins/tauri-plugin-pty/: Cargo.toml
src-tauri/plugins/tauri-plugin-pty/src/: lib.rs
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: agent.rs  agent_activity.rs  clipboard.rs  environment.rs  files.rs  git.rs  hooks.rs  mod.rs  notification.rs  project.rs  remote_git.rs  settings.rs  ssh.rs  ssh_tmux.rs  tmux.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/migrations/: 001_initial.sql  002_tmux_sessions.sql  003_app_settings.sql  004_agent_activity.sql  005_ssh_connections.sql  006_project_sort_order.sql  007_ssh_remote_path.sql  008_project_agent_type.sql
src-tauri/src/models/: agent.rs  agent_activity.rs  agent_type.rs  environment.rs  files.rs  git.rs  mod.rs  notification.rs  project.rs  settings.rs  ssh.rs  tmux.rs
src-tauri/src/services/: agent.rs  agent_activity.rs  clipboard.rs  environment.rs  event_server.rs  file_service.rs  git.rs  hooks.rs  mod.rs  notification.rs  pane_monitor.rs  project.rs  remote_git.rs  settings.rs  ssh.rs  ssh_tmux.rs  tmux.rs
src/app/: App.tsx  providers.tsx  routes.tsx
src/hooks/: useGlobalShortcuts.ts  useIdleAgentCleanup.ts  useLRUPool.ts  useResizeHandle.ts  useSleepWakeDetector.ts  useSplitPanelResize.ts
src/lib/: payload-helpers.ts
tests/: setup.ts
(+162 files in other folders)
