[package]
name = "flow-orche"
version = "0.1.0"
description = "Clew — Claude Code Agent Teams Orchestrator"
authors = ["you"]
edition = "2021"

[lib]
name = "flow_orche_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tiny_http = "0.12"
dirs = "5"
url = "2"
tauri-plugin-pty = { path = "plugins/tauri-plugin-pty" }
ignore = "0.4"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
